--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ body{margin:0;background:var(--bg);color:var(--text);
 .top{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:12px;align-items:flex-start;}
 .kpi{font-size:18px;font-weight:900;}
 .muted{color:var(--muted);font-size:13px;white-space:pre-wrap;}
-button,input,textarea{
+button,input,textarea,select{
+
   background:#0f1624;color:var(--text);
   border:1px solid var(--line);border-radius:10px;padding:8px 12px;
 }
@@ -1209,4 +1210,5 @@ draw();
 </script>
 </body>
 </html>
+
 
