--- a/index.html
+++ b/index.html
@@ -934,11 +934,14 @@ els.saveLink.addEventListener("click", async ()=>{
 
   saveToHash();
 
+  const url = location.href;
+
   try{
-    await navigator.clipboard.writeText(location.href);
-    alert("✅ 링크가 클립보드에 복사되었습니다!");
+    await navigator.clipboard.writeText(url);
+    alert("✅ 링크 저장 + 복사 완료!\n붙여넣기(Ctrl+V)로 공유하면 됩니다.");
   }catch(e){
-    alert("링크 저장 완료!\n주소창에서 직접 복사해 주세요.");
+    // 일부 환경(권한/HTTP/브라우저 설정)에서 clipboard가 막힐 수 있음
+    prompt("✅ 링크가 만들어졌어요. 아래 링크를 복사해서 공유하세요.", url);
   }
 });
 
@@ -1221,6 +1224,7 @@ draw();
 </script>
 </body>
 </html>
+
 
 
 
