--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>전승 노드 맵퍼 + 시뮬레이터</title>
+<title>프라시아 크리에이터 강모찌의 시뮬레이터 </title>
 <style>
 :root{
   --bg:#0b0f17; --card:#121a27; --text:#e8eefc;
@@ -1276,6 +1276,7 @@ draw();
 </script>
 </body>
 </html>
+
 
 
 
