--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ canvas{width:100%;height:100%;display:block;}
   <div class="card" style="flex:1;min-width:780px">
     <div class="row" style="justify-content:space-between">
       <div>
-        <div class="kpi">전승 노드 맵퍼 + 시뮬레이터</div>
+        <div class="kpi">프라시아 크리에이터 강모찌의 시뮬레이터</div>
         <div class="muted" id="subtitle">EDIT에서 배경/노드/라인 배치 → 링크 저장 → 공유자는 SIM만</div>
       </div>
       <span class="badge" id="modeBadge">EDIT</span>
@@ -1276,6 +1276,7 @@ draw();
 </script>
 </body>
 </html>
+
 
 
 
