--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ canvas{width:100%;height:100%;display:block;}
 /** =========================
  *  ✅ 관리자 비밀번호
  *  ========================= */
-const ADMIN_PASSWORD = "1234";
+const ADMIN_PASSWORD = "dkgus12";
 
 const cv = document.getElementById("cv");
 const ctx = cv.getContext("2d");
@@ -1276,6 +1276,7 @@ draw();
 </script>
 </body>
 </html>
+
 
 
 
