--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ canvas{width:100%;height:100%;display:block;}
  *  ========================= */
 const ADMIN_PASSWORD = "dkgus12";
   // ✅ SIM(공유) 비밀번호
-const SIM_PASSWORD = "prmochi#8535";
+const SIM_PASSWORD = "pramochi#8535";
 
 
 const cv = document.getElementById("cv");
@@ -1357,3 +1357,4 @@ draw();
 </script>
 </body>
 </html>
+
