--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ canvas{width:100%;height:100%;display:block;}
  *  ========================= */
 const ADMIN_PASSWORD = "dkgus12";
 // ✅ SIM(공유) 비밀번호
-const SIM_PASSWORD = "prmochi#8535";
+const SIM_PASSWORD = "pramochi#8535";
 
 const cv = document.getElementById("cv");
 const ctx = cv.getContext("2d");
@@ -1298,3 +1298,4 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
