--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ canvas{width:100%;height:100%;display:block;}
 </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>  
 <script>
 /** =========================
  *  ✅ 관리자 비밀번호
@@ -462,15 +463,19 @@ function applyPack(obj){
 
 function saveToHash({ includeLvl = false } = {}){
   const str = JSON.stringify(pack({ includeLvl }));
-  const b64 = btoa(unescape(encodeURIComponent(str)));
-  location.hash = b64;
+  const compressed = LZString.compressToEncodedURIComponent(str);
+  location.hash = compressed;
 }
+
 
 function loadFromHash(){
   try{
     const h = location.hash.replace("#","");
     if(!h) return false;
-    const str = decodeURIComponent(escape(atob(h)));
+
+    const str = LZString.decompressFromEncodedURIComponent(h);
+    if(!str) return false;
+
     const obj = JSON.parse(str);
     applyPack(obj);
     return true;
@@ -478,6 +483,7 @@ function loadFromHash(){
     return false;
   }
 }
+
 
 function setViewerMode(on){
   state.viewerMode = on;
@@ -1298,4 +1304,5 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
