--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@ canvas{width:100%;height:100%;display:block;}
     </div>
   </div>
 
-  <div class="card" style="min-width:420px">
-    <div class="row" style="justify-content:flex-end">
-      <button id="toggleMode">시뮬레이터 보기</button>
-      <button id="adminEdit">EDIT(관리자)</button>
-      <button id="saveLink">링크 저장</button>
-      <button id="resetPoints">포인트 초기화</button>
-      <button id="retrySimPwd" style="display:none">비밀번호 재입력</button>
-    </div>
+  <div class="row" style="justify-content:flex-end">
+  <button id="toggleMode">시뮬레이터 보기</button>
+  <button id="adminEdit">EDIT(관리자)</button>
+
+  <button id="saveLinkBase">링크 저장(초기화)</button>
+  <button id="saveLinkBuild">링크 저장(내 빌드)</button>
+
+  <button id="resetPoints">포인트 초기화</button>
+  <button id="retrySimPwd" style="display:none">비밀번호 재입력</button>
+</div>
+
     <div class="muted small" id="shareInfo" style="margin-top:6px"></div>
   </div>
 </div>
@@ -267,7 +270,8 @@ const els = {
   toggleMode: document.getElementById("toggleMode"),
   adminEdit: document.getElementById("adminEdit"),
   resetPoints: document.getElementById("resetPoints"),
-  saveLink: document.getElementById("saveLink"),
+  saveLinkBase: document.getElementById("saveLinkBase"),
+  saveLinkBuild: document.getElementById("saveLinkBuild"),
   shareInfo: document.getElementById("shareInfo"),
   retrySimPwd: document.getElementById("retrySimPwd"),
   bgUrlInput: document.getElementById("bgUrlInput"),
@@ -1017,19 +1021,34 @@ els.resetPoints.addEventListener("click", ()=>{
   draw();
 });
 
-// 링크 저장
-els.saveLink.addEventListener("click", ()=>{
+// 링크 저장(초기화) = 템플릿 공유 (포인트 상태는 0으로)
+els.saveLinkBase.addEventListener("click", ()=>{
   saveToHash({ includeLvl: false });
 
   const url = location.href;
   try{
     navigator.clipboard.writeText(url);
-    els.shareInfo.textContent = "✅ 링크가 복사됨 (붙여넣기 해서 공유하면 됨)";
+    els.shareInfo.textContent = "✅ 링크(초기화)가 복사됨";
   }catch(e){
-    els.shareInfo.textContent = "✅ 링크 저장됨 (주소창 URL 복사해서 공유)";
+    els.shareInfo.textContent = "✅ 링크(초기화) 저장됨 (주소창 URL 복사)";
   }
   draw();
 });
+
+// 링크 저장(내 빌드) = 현재 찍은 포인트 상태까지 포함
+els.saveLinkBuild.addEventListener("click", ()=>{
+  saveToHash({ includeLvl: true });
+
+  const url = location.href;
+  try{
+    navigator.clipboard.writeText(url);
+    els.shareInfo.textContent = "✅ 링크(내 빌드)가 복사됨";
+  }catch(e){
+    els.shareInfo.textContent = "✅ 링크(내 빌드) 저장됨 (주소창 URL 복사)";
+  }
+  draw();
+});
+
 
 // SIM/EDIT 토글
 els.toggleMode.addEventListener("click", ()=>{
@@ -1304,5 +1323,6 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
