--- a/index.html
+++ b/index.html
@@ -83,16 +83,17 @@ canvas{width:100%;height:100%;display:block;}
     </div>
   </div>
 
-  <div class="row" style="justify-content:flex-end">
-  <button id="toggleMode">시뮬레이터 보기</button>
-  <button id="adminEdit">EDIT(관리자)</button>
+  <div class="card" style="min-width:420px">
+    <div class="row" style="justify-content:flex-end; flex-wrap:wrap;">
+      <button id="toggleMode">시뮬레이터 보기</button>
+      <button id="adminEdit">EDIT(관리자)</button>
 
-  <button id="saveLinkBase">링크 저장(초기화)</button>
-  <button id="saveLinkBuild">링크 저장(내 빌드)</button>
+      <button id="saveLinkBase">링크 저장(초기화)</button>
+      <button id="saveLinkBuild">링크 저장(내 빌드)</button>
 
-  <button id="resetPoints">포인트 초기화</button>
-  <button id="retrySimPwd" style="display:none">비밀번호 재입력</button>
-</div>
+      <button id="resetPoints">포인트 초기화</button>
+      <button id="retrySimPwd" style="display:none">비밀번호 재입력</button>
+    </div>
 
     <div class="muted small" id="shareInfo" style="margin-top:6px"></div>
   </div>
@@ -1323,6 +1324,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
