--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ function setSimLocked(on){
 }
 
 function askSimPassword(){
-  const inputRaw = prompt("이 시뮬레이터는 비밀번호가 필요합니다.");
+  const inputRaw = prompt("비밀번호는 강모찌 후원코드입니다");
   if(inputRaw === null) return; // 취소
   const input = String(inputRaw).trim(); // ✅ 공백 실수 방지
 
@@ -1340,6 +1340,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
