--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@ button,input,textarea,select{
   border:1px solid var(--line);border-radius:10px;padding:8px 12px;
 }
 button:hover{border-color:#3a527a;cursor:pointer;}
+.btnLink{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  text-decoration:none;
+  background:#0f1624;
+  color:var(--text);
+  border:1px solid var(--line);
+  border-radius:10px;
+  padding:8px 12px;
+}
+.btnLink:hover{
+  border-color:#3a527a;
+  cursor:pointer;
+}
+  
 textarea{width:100%;height:280px;padding:10px;font-family:ui-monospace,Consolas,monospace;}
 .grid{display:grid;grid-template-columns: 1fr 420px;gap:12px;}
 .stage{position:relative;width:100%;height:2400px;border-radius:14px;
@@ -85,6 +101,8 @@ canvas{width:100%;height:100%;display:block;}
 
   <div class="card" style="min-width:420px">
     <div class="row" style="justify-content:flex-end; flex-wrap:wrap;">
+      <a class="btnLink" href="https://creators.nexon.com/kr/s/pramochi%238535" target="_blank" rel="noopener">강모찌후원등록</a>
+      
       <button id="toggleMode">시뮬레이터 보기</button>
       <button id="adminEdit">EDIT(관리자)</button>
 
@@ -1354,6 +1372,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
