--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ canvas{width:100%;height:100%;display:block;}
 
   <div class="card" style="min-width:420px">
     <div class="row" style="justify-content:flex-end; flex-wrap:wrap;">
-      <a class="btnLink" href="https://creators.nexon.com/kr/s/pramochi%238535" target="_blank" rel="noopener">강모찌후원등록</a>
+      <a class="btnLink" href="https://creators.nexon.com/kr/s/pramochi%238535" target="_blank" rel="noopener noreferrer">강모찌후원등록</a>
       
       <button id="toggleMode">시뮬레이터 보기</button>
       <button id="adminEdit">EDIT(관리자)</button>
@@ -1372,6 +1372,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
